[tool.poetry]
name = "across-py"
version = "0.0.2"
description = "across sdk in python"
authors = ["qiwihui <qwh005007@gmail.com>"]
maintainers = ["qiwihui <qwh005007@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/qiwihui/across-py"
repository = "https://github.com/qiwihui/across-py"
keywords = [
    "across",
    "UMA",
    "layer2",
    "bridge",
]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "across" },
]

[tool.poetry.dependencies]
python = "^3.6"
web3 = "^5.28.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
